# todo

./: .todo  Cargo.toml  install.sh
src/: lib.rs  list.rs  main.rs
src/list/: cli.rs  mod.rs  stress.rs
src/manager/: cli.rs  mod.rs
src/schedule/: cli.rs  default_schedule.rs  itinerary.rs  mod.rs
src/task/: cli.rs  mod.rs  status.rs  stress.rs
