[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = {version = "0.4.41", features = ["serde"]}
dirs = "6.0.0"
inquire = {version = "0.7.5", features = ["chrono", "date", "editor"]}
itertools = "0.14.0"
serde = {version = "1.0.219", features = ["derive", "rc"]}
serde_yaml = "0.9"
